--- a/src/AntiDupl/AntiDupl.vcxproj
+++ b/src/AntiDupl/AntiDupl.vcxproj
@@ -42,7 +42,7 @@
     <ClCompile>
       <PreprocessorDefinitions>_WINDOWS;_USRDLL;ANTIDUPL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DisableSpecificWarnings Condition="'$(Platform)'=='x64'">4267</DisableSpecificWarnings>
-      <AdditionalIncludeDirectories>D:\Downloads\simd.4.6.90\simd\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\simd-bin\simd.4.6.96\simd\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <FloatingPointModel>Fast</FloatingPointModel>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
@@ -67,7 +67,7 @@
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX64</TargetMachine>
       <AdditionalDependencies>avx1.lib;avx2.lib;avx512bw.lib;avx512f.lib;avx512vnni.lib;base.lib;neon.lib;simd.lib;sse1.lib;sse2.lib;sse3.lib;sse41.lib;sse42.lib;ssse3.lib;vmx.lib;vsx.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\Downloads\simd.4.6.90\simd\binaries\x64-windows\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\simd-bin\simd.4.6.96\simd\binaries\x64-windows\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <EnableCOMDATFolding Condition="'$(Configuration)'=='Release'">true</EnableCOMDATFolding>
       <OptimizeReferences Condition="'$(Configuration)'=='Release'">true</OptimizeReferences>
     </Link>
