Move to .net 5.0

--- a/src/AntiDupl.NET/AntiDupl.NET.csproj
+++ b/src/AntiDupl.NET/AntiDupl.NET.csproj
@@ -1,12 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
-    <AssemblyVersion>2.3.10.12</AssemblyVersion>
-    <FileVersion>2.3.10.12</FileVersion>
+    <AssemblyVersion>2.3.10.14</AssemblyVersion>
+    <FileVersion>2.3.10.14</FileVersion>
     <Platforms>x64</Platforms>
     <Company>ErmIg</Company>
     <Copyright>ErmIg © 2002-2018</Copyright>
