Use vcpkg's static linking for AntiDupl

--- a/src/AntiDupl/AntiDupl.vcxproj
+++ b/src/AntiDupl/AntiDupl.vcxproj
@@ -26,6 +26,7 @@
     <VcpkgEnabled>true</VcpkgEnabled>
     <VcpkgManifestInstall>true</VcpkgManifestInstall>
     <VcpkgAutoLink>true</VcpkgAutoLink>
+    <VcpkgUseStatic>true</VcpkgUseStatic>
   </PropertyGroup>
   <PropertyGroup>
     <OutDir>$(ProjectDir)bin\$(Platform)\$(Configuration)\</OutDir>
