--- a/src/AntiDupl.Native/AntiDupl.Native.csproj
+++ b/src/AntiDupl.Native/AntiDupl.Native.csproj
@@ -4,9 +4,9 @@
     <OutputType>Library</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <VersionPrefix>2.4.0</VersionPrefix>
-    <!--<VersionSuffix>0</VersionSuffix>-->
-    <AssemblyVersion>2.4.0.5</AssemblyVersion>
-    <FileVersion>2.4.0.5</FileVersion>
+    <VersionSuffix></VersionSuffix>
+    <AssemblyVersion>2.4.0.6</AssemblyVersion>
+    <FileVersion>2.4.0.6</FileVersion>
     <Platforms>x64</Platforms>
     <Configurations>Debug;Release</Configurations>
     <Authors>Gigas002</Authors>
@@ -28,7 +28,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="../AntiDupl/bin/$(Platform)/Release/*.dll">
+    <!-- for dynamic linking use this -->
+    <!-- <None Include="../AntiDupl/bin/$(Platform)/Release/*.dll"> -->
+    <None Include="../AntiDupl/bin/$(Platform)/Release/AntiDupl.dll">
       <PackagePath>runtimes/win-$(Platform)/native</PackagePath>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Pack>True</Pack>
